syntax="proto3";
package quick_trade;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/k2rth1k/qt/proto;quick_trade";

service QuickTrade{

    rpc HelloWorld(EmptyMessage) returns (Message){
        option(google.api.http)={
            get:"/v1/hello-world"
        };
    }
    rpc CreateUser(CreateUserRequest) returns (User){
        option(google.api.http)={
            post:"/v1/users/create"
            body:"*"
        };
    }
    rpc Login(LoginRequest) returns (LoginResponse){
        option(google.api.http)={
            post:"/v1/login"
            body:"*"
        };
    }
    rpc Refresh(RefreshRequest) returns (RefreshResponse){
        option(google.api.http)={
            post:"/v1/refresh"
            body:"*"
        };
    }
    rpc Logout(LogoutRequest) returns (EmptyMessage){
        option(google.api.http)={
            post:"/v1/logout"
            body:"*"
        };
    }
}

message CreateUserRequest{
    string email = 1;
    string phone = 2;
    string first_name = 3;
    string last_name = 4;
    string password = 5;
}

message User{
    string email = 1;
    string phone = 2;
    string first_name = 3;
    string last_name = 4;
    string user_id = 5;
}

message Message{
    string message = 1;
}

message EmptyMessage{
}

message LoginRequest{
    string email = 1;
    string password = 2;
}

message LoginResponse{
    string access_token = 1;
    string refresh_token = 2;
}

message RefreshRequest{
    string refresh_token = 1;
}

message RefreshResponse{
    string access_token = 1;
    string refresh_token = 2;
}

message LogoutRequest{
    string access_token = 1;
}